--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "Improving lifestyle with AI-powered applications. Constructive, Collaborative, and Community-driven.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#166534",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "orientation": "portrait-primary",
   "icons": [
     {
