--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "CoApps - AI-Powered Lifestyle Apps",
   "short_name": "CoApps",
-  "description": "Improving lifestyle with AI-powered applications. Constructive, Collaborative, and Community-driven.",
+  "description": "building COmmunity thorugh apps.... Constructive, Collaborative, and Community-driven.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
